data/derived/fa15/progs/unify/prog3440.ml.out
Characters 109-128:
  let seen' = if(List.mem(h, seen)) then seen else h :: seen in
                ^^^^^^^^^^^^^^^^^^^
Error: This expression has type ('a * 'b) list -> bool
       but an expression was expected of type bool
